# tic_tac_toe

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  pyproject.toml  pyvenv.cfg  run_tests.sh
.github/workflows/: python-app-matrix.yml  python-app-p311.yaml  python-app-p312.yaml  python-app.yml  ruff.yml
docs/: conf.py  index.rst  modules.rst  src.rst  src.tests.rst  src.tic_tac_toe.frontends.console.rst  src.tic_tac_toe.frontends.rst  src.tic_tac_toe.game.rst  src.tic_tac_toe.logic.rst  src.tic_tac_toe.rst
frontends/: play.py
frontends/console/: renderers.py
src/: play.py  pyproject.toml  ticLauncher.py  tic_launcher.py
src/tests/: test_game.py
src/tic_tac_toe/frontends/console/: renderers.py
src/tic_tac_toe/game/: engine.py  players.py  renderers.py
src/tic_tac_toe/logic/: minimax.py  models.py  validators.py
