[project]
name = "tic_tac_toe"
version = "0.1.0"
description = "tictactoe with minimax solver"
authors = [
    {name = "rsy", email = "intriqet@gmail.com"},
]
dependencies = []
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tools.pytest.ini_options]
minversion = "6.0"
addopts = -v -ra -q
log_cli = True
log_cli_level = INFO
log_format = %(asctime)s %(levelname)s %(message)s
log_date_format = %Y-%m-%d %H:%M:%S
markers =
	regression: Run the regression Tests
	sanity: Quick tests
	slow: Marks tests that executes slowly

[tool.pdm]
distribution = true
